--- a/test/app/views/signup/index.phtml
+++ b/test/app/views/signup/index.phtml
@@ -1,29 +1,19 @@
-<h2>
-    Sign up using this form
-</h2>
+<h2>Sign using this form</h2>
 
-<?php echo $this->tag->form("signup/register"); ?>
+<?php echo $this->tag->form('signup/register') ?>
 
 <p>
-    <label for="name">
-        Name
-    </label>
-
-    <?php echo $this->tag->textField("name"); ?>
+    <label for="name">Name</label>
+    <?php echo $this->tag->textField("name") ?>
 </p>
 
 <p>
-    <label for="email">
-        E-Mail
-    </label>
-
-    <?php echo $this->tag->textField("email"); ?>
+    <label for="name">E-Mail</label>
+    <?php echo $this->tag->textField("email") ?>
 </p>
 
-
-
 <p>
-    <?php echo $this->tag->submitButton("Register"); ?>
+    <?php echo $this->tag->submitButton("Register") ?>
 </p>
 
 </form>
