--- a/test/app/views/signup/index.phtml
+++ b/test/app/views/signup/index.phtml
@@ -8,8 +8,8 @@
 </p>
 
 <p>
-    <label for="name">E-Mail</label>
-    <?php echo $this->tag->textField("email") ?>
+    <label for="pass">Password</label>
+    <?php echo $this->tag->passwordField("pass") ?>
 </p>
 
 <p>
